Fix horizontal scrolling

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,6 +1,5 @@
 body, html {
   width: 100%;
-  overflow-x: hidden;
 }
 
 img {
